# smcHash

./: .gitignore  BIGCRUSH_RESULTS.md  README.md  smchash.h
csharp/: SmcHash.cs
dart/smchash/: CHANGELOG.md  README.md  pubspec.yaml
dart/smchash/example/: smchash_example.dart
dart/smchash/lib/: smchash.dart
dart/smchash/lib/src/: smchash_base.dart
dart/smchash/test/: smchash_test.dart
go/: go.mod  smchash.go  smchash_test.go
java/: SmcHash.java
python/: smchash.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
typescript/: README.md  package-lock.json  package.json  smchash.ts
